work form wednesday morning

--- a/BeforeNode/homepage.html
+++ b/BeforeNode/homepage.html
@@ -127,6 +127,7 @@
 											SERVICES
 										</a>
 									</li>
+									
 									<li><!-- WORK -->
 										<a href="#work">
 											PORTFOLIO
@@ -149,6 +150,19 @@
 											CONTACT
 										</a>
 									</li>
+
+									<li class="nav-item dropdown">
+										<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+										  OFFERS
+										</a>
+										<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										  <a class="dropdown-item" href="residential.html">residential</a>
+										  <a class="dropdown-item" href="corporate.html">corporate</a>
+										  <div class="dropdown-divider"></div>
+										  <a class="dropdown-item" href="quote.html">get a Quote</a>
+										</div>
+									  </li>
+
 								</ul>
 
 							</nav>
@@ -1348,7 +1362,7 @@
 											</div>
 											<div class="col-md-12">
 												<label for="contact:projectDescription">Project description (500 characters)</label>
-												<textarea required maxlength="1000" rows="4" class="form-control" name="contact[projectDescription]" id="contact:projectDescription"></textarea>
+												<textarea required maxlength="500" rows="4" class="form-control" name="contact[projectDescription]" id="contact:projectDescription"></textarea>
 											</div>
 											
 									</div>
